navbar spacing fix

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -274,6 +274,9 @@
   .mx-1 {
     margin-inline: calc(var(--spacing) * 1);
   }
+  .mx-4 {
+    margin-inline: calc(var(--spacing) * 4);
+  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -516,6 +519,9 @@
   .bg-\[\#F0F0F0\] {
     background-color: #F0F0F0;
   }
+  .bg-\[\#f2f0f1\] {
+    background-color: #f2f0f1;
+  }
   .bg-black {
     background-color: var(--color-black);
   }
@@ -548,6 +554,12 @@
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
+  }
+  .px-\[16\] {
+    padding-inline: 16;
+  }
+  .px-\[16px\] {
+    padding-inline: 16px;
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -662,6 +674,9 @@
   }
   .text-\[28px\] {
     font-size: 28px;
+  }
+  .text-\[30px\] {
+    font-size: 30px;
   }
   .text-\[32px\] {
     font-size: 32px;
